[package]
name = "downmixer"
version = "0.0.4"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
repository = "https://github.com/0xAA55-rs/rustwav"
readme = "Readme.md"
description = "A downmixer that can do 2, Dolby 2.1, 3.1, 4.1, 5.1, 6.1, 7.1 channels audio downmix to 2 or 1 channels in Rust."
keywords = ["downmixer", "audio"]

[dependencies]
copiablebuf = "^0"
sampletypes = "^0"

[profile.release]
lto = "fat"

[lib]
name = "downmixer"
path = "src/downmixer.rs"
